python review, extraclass | 190726

--- a/01_python/01.python_intro.ipynb
+++ b/01_python/01.python_intro.ipynb
@@ -53,7 +53,7 @@
     "# 식별자들을 직접 확인해봅시다.\n",
     "import keyword     \n",
     "\n",
-    "print(keyword.kwlist)"
+    "print(keyword.kwlist)  # 식별자를 확인하는 방법 => 아래의 식별자는 사용하면 안된다. "
    ]
   },
   {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,30 +178,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "이것은 제가 만든 함수입니다. \n",
-      "    이 줄도 코드에 영향을 주지 않습니다. \n",
-      "    하지만, 이름이 docstring 인 것은 이유가 있습니다. \n",
-      "    \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# docstring은 다음과 같이 확인할 수 있습니다.   #Jupyter는 마지막 줄일 때만 출력한다. \n",
     "print(my_func.__doc__)\n",
