--- a/02_web/190731.md
+++ b/02_web/190731.md
@@ -103,17 +103,11 @@ button
 
 
 
----
-
 
 
 `vw` `vh` : 디스플레이가 비율이 변화함에 따라서 
 
 `z-index` 
-
-
-
----
 
 
 
@@ -124,3 +118,46 @@ button
 
 
 참고해서 공부하기 : https://poiemaweb.com/
+
+
+
+## 03. Bootstrap
+
+https://getbootstrap.com/
+
+
+
+`<div class="container"></div>` 
+
+모바일처럼 사용을 할 수 있다. 
+
+
+
+컨테이너 안에 로우들을 쌓아 나간다. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
