--- a/02_web/190801.md
+++ b/02_web/190801.md
@@ -18,3 +18,59 @@
 
 
 
+
+
+자바스크림트 언어가 id 가 필요하다 
+
+css 에서는 사용하지 않는다. 
+
+`#` id
+
+`.` class 
+
+
+
+### grid
+
+container > row 
+
+row : 클래스 안에 로우가 있을 떄 col을 먹는다. 
+
+​			12개의 grid / sm md 
+
+`<div class="row">` 안에 또 넣으면 그 안에서 12를 기준으로 나누어서 할 수 있다. 
+
+
+
+모바일 디자인을 먼저 시작해야한다. 왜?
+
+필요한 것만 넣기 위해서 
+
+
+
+offset-5 : 내 앞에 5자리 비워놔 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
