--- a/01_python/01.python_intro.ipynb
+++ b/01_python/01.python_intro.ipynb
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1384,8 +1384,9 @@
       "\n",
       "여러줄을 사용할 때는 \n",
       "single quote * 3개도 가능은 합니다. \n",
-      "하지만, 반드리 double quote *3개를 씁시다!\n",
-      "\n"
+      "하지만, 반드시 double quote *3개를 씁시다!\n",
+      "\n",
+      "<class 'str'>\n"
      ]
     }
    ],
@@ -1397,7 +1398,8 @@
     "하지만, 반드시 double quote *3개를 씁시다!\n",
     "\"\"\"\n",
     "\n",
-    "print(long_str)"
+    "print(long_str)\n",
+    "print(type(long_str))"
    ]
   },
   {
@@ -1626,14 +1628,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-07-15 16:23:04.758691\n"
+      "2019-07-28 13:31:34.867388\n",
+      "<class 'datetime.datetime'>\n"
      ]
     }
    ],
@@ -1644,6 +1647,7 @@
     "\n",
     "today = datetime.datetime.now()\n",
     "print(today)\n",
+    "print(type(today))\n",
     "\n"
    ]
   },
@@ -1739,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1749,18 +1753,9 @@
       "2.5\n",
       "2\n",
       "2\n",
+      "1\n",
       "1\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1769,12 +1764,14 @@
     "print(5 // 2)\n",
     "print(int(5 / 2))   # int는 기본적으로 내림이다. \n",
     "print(5 % 2)\n",
-    "5 == (5 // 2) * 2 + (5 % 2)\n"
+    "5 == (5 // 2) * 2 + (5 % 2)\n",
+    "\n",
+    "print(7 % 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1782,7 +1779,8 @@
      "output_type": "stream",
      "text": [
       "(2, 1)\n",
-      "2 1\n"
+      "2 1\n",
+      "<class 'tuple'>\n"
      ]
     }
    ],
@@ -1790,7 +1788,8 @@
     "# divmod는 나눗셈과 관련된 함수입니다.\n",
     "print(divmod(5, 2))\n",
     "quotient, remainder = divmod(5, 2)\n",
-    "print(quotient, remainder)"
+    "print(quotient, remainder)\n",
+    "print(type(divmod(5, 2)))"
    ]
   },
   {
@@ -1887,23 +1886,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 다른 숫자인지 확인해봅시다.\n",
-    "3 != 3.0"
+    "3 != 3.0\n",
+    "3 == 3.0"
    ]
   },
   {
@@ -2152,7 +2152,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3150,16 +3152,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 5, 6, 7, 8, 9]\n",
+      "[3, 5, 7, 9]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'elppa'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3167,10 +3179,10 @@
    "source": [
     "l = list(range(10))\n",
     "\n",
-    "l[3:]   # 3 <= index <= 마지막\n",
-    "l[3::2]   # 3 <= ind & step 2 <= 마지막\n",
-    "l[:]   # 처음 <= index <= 마지막\n",
-    "l[::-1]   # 뒤집기\n",
+    "print(l[3:])   # 3 <= index <= 마지막\n",
+    "print(l[3::2])  # 3 <= ind & step 2 <= 마지막\n",
+    "print(l[:])   # 처음 <= index <= 마지막\n",
+    "print(l[::-1])   # 뒤집기\n",
     "\n",
     "'apple'[::-1] # 시퀀스 자료형엔 모두 대괄호를 붙일 수 있다. \n"
    ]
