--- a/01_python/02.control_of_flow.ipynb
+++ b/01_python/02.control_of_flow.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 이하\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# 위의 flow chart를 조건문을 통해 만들어봅시다.\n",
     "a = 5\n",
@@ -95,9 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "날짜를 입력해주세요 ex)12/24 : 12/25\n",
+      "12/25\n",
+      "크리스마스입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "# 실습!\n",
     "is_christmas = input(\"날짜를 입력해주세요 ex)12/24 : \")\n",
@@ -130,9 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "숫자를 입력하세요 : 3\n",
+      "홀수\n"
+     ]
+    }
+   ],
    "source": [
     "# 실습!\n",
     "num = int(input(\"숫자를 입력하세요 : \"))   \n",
@@ -377,9 +405,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "끝\n"
+     ]
+    }
+   ],
    "source": [
     "# 위의 flow chart를 조건문을 통해 만들어봅시다.\n",
     "\n",
@@ -545,9 +586,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "입력을 하세요: 안녕~\n",
+      "안\n",
+      "녕\n",
+      "~\n"
+     ]
+    }
+   ],
    "source": [
     "input_text = input('입력을 하세요: ')   # type(a) == 'str' : seq => 중요하다. \n",
     "\n",
@@ -574,9 +626,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29]\n",
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30]\n"
+     ]
+    }
+   ],
    "source": [
     "# 여기에 코드를 작성하세요.\n",
     "odd_numbers = []\n",
@@ -647,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -914,9 +975,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1부터 10까지 중에서 한 숫자를 생각하세요. 해당 숫자가 나오면, Y/N\n",
+      "0가 맞나요?: Y\n",
+      "YEAH!\n"
+     ]
+    }
+   ],
    "source": [
     "# break 문을 활용해봅시다.\n",
     "print('1부터 10까지 중에서 한 숫자를 생각하세요. 해당 숫자가 나오면, Y/N')\n",
