--- a/01_python/03.function.ipynb
+++ b/01_python/03.function.ipynb
@@ -169,9 +169,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ArithmeticError',\n",
+       " 'AssertionError',\n",
+       " 'AttributeError',\n",
+       " 'BaseException',\n",
+       " 'BlockingIOError',\n",
+       " 'BrokenPipeError',\n",
+       " 'BufferError',\n",
+       " 'BytesWarning',\n",
+       " 'ChildProcessError',\n",
+       " 'ConnectionAbortedError',\n",
+       " 'ConnectionError',\n",
+       " 'ConnectionRefusedError',\n",
+       " 'ConnectionResetError',\n",
+       " 'DeprecationWarning',\n",
+       " 'EOFError',\n",
+       " 'Ellipsis',\n",
+       " 'EnvironmentError',\n",
+       " 'Exception',\n",
+       " 'False',\n",
+       " 'FileExistsError',\n",
+       " 'FileNotFoundError',\n",
+       " 'FloatingPointError',\n",
+       " 'FutureWarning',\n",
+       " 'GeneratorExit',\n",
+       " 'IOError',\n",
+       " 'ImportError',\n",
+       " 'ImportWarning',\n",
+       " 'IndentationError',\n",
+       " 'IndexError',\n",
+       " 'InterruptedError',\n",
+       " 'IsADirectoryError',\n",
+       " 'KeyError',\n",
+       " 'KeyboardInterrupt',\n",
+       " 'LookupError',\n",
+       " 'MemoryError',\n",
+       " 'ModuleNotFoundError',\n",
+       " 'NameError',\n",
+       " 'None',\n",
+       " 'NotADirectoryError',\n",
+       " 'NotImplemented',\n",
+       " 'NotImplementedError',\n",
+       " 'OSError',\n",
+       " 'OverflowError',\n",
+       " 'PendingDeprecationWarning',\n",
+       " 'PermissionError',\n",
+       " 'ProcessLookupError',\n",
+       " 'RecursionError',\n",
+       " 'ReferenceError',\n",
+       " 'ResourceWarning',\n",
+       " 'RuntimeError',\n",
+       " 'RuntimeWarning',\n",
+       " 'StopAsyncIteration',\n",
+       " 'StopIteration',\n",
+       " 'SyntaxError',\n",
+       " 'SyntaxWarning',\n",
+       " 'SystemError',\n",
+       " 'SystemExit',\n",
+       " 'TabError',\n",
+       " 'TimeoutError',\n",
+       " 'True',\n",
+       " 'TypeError',\n",
+       " 'UnboundLocalError',\n",
+       " 'UnicodeDecodeError',\n",
+       " 'UnicodeEncodeError',\n",
+       " 'UnicodeError',\n",
+       " 'UnicodeTranslateError',\n",
+       " 'UnicodeWarning',\n",
+       " 'UserWarning',\n",
+       " 'ValueError',\n",
+       " 'Warning',\n",
+       " 'WindowsError',\n",
+       " 'ZeroDivisionError',\n",
+       " '__IPYTHON__',\n",
+       " '__build_class__',\n",
+       " '__debug__',\n",
+       " '__doc__',\n",
+       " '__import__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'abs',\n",
+       " 'all',\n",
+       " 'any',\n",
+       " 'ascii',\n",
+       " 'bin',\n",
+       " 'bool',\n",
+       " 'breakpoint',\n",
+       " 'bytearray',\n",
+       " 'bytes',\n",
+       " 'callable',\n",
+       " 'chr',\n",
+       " 'classmethod',\n",
+       " 'compile',\n",
+       " 'complex',\n",
+       " 'copyright',\n",
+       " 'credits',\n",
+       " 'delattr',\n",
+       " 'dict',\n",
+       " 'dir',\n",
+       " 'display',\n",
+       " 'divmod',\n",
+       " 'enumerate',\n",
+       " 'eval',\n",
+       " 'exec',\n",
+       " 'filter',\n",
+       " 'float',\n",
+       " 'format',\n",
+       " 'frozenset',\n",
+       " 'get_ipython',\n",
+       " 'getattr',\n",
+       " 'globals',\n",
+       " 'hasattr',\n",
+       " 'hash',\n",
+       " 'help',\n",
+       " 'hex',\n",
+       " 'id',\n",
+       " 'input',\n",
+       " 'int',\n",
+       " 'isinstance',\n",
+       " 'issubclass',\n",
+       " 'iter',\n",
+       " 'len',\n",
+       " 'license',\n",
+       " 'list',\n",
+       " 'locals',\n",
+       " 'map',\n",
+       " 'max',\n",
+       " 'memoryview',\n",
+       " 'min',\n",
+       " 'next',\n",
+       " 'object',\n",
+       " 'oct',\n",
+       " 'open',\n",
+       " 'ord',\n",
+       " 'pow',\n",
+       " 'print',\n",
+       " 'property',\n",
+       " 'range',\n",
+       " 'repr',\n",
+       " 'reversed',\n",
+       " 'round',\n",
+       " 'set',\n",
+       " 'setattr',\n",
+       " 'slice',\n",
+       " 'sorted',\n",
+       " 'staticmethod',\n",
+       " 'str',\n",
+       " 'sum',\n",
+       " 'super',\n",
+       " 'tuple',\n",
+       " 'type',\n",
+       " 'vars',\n",
+       " 'zip']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 내장함수 목록을 직접 볼 수도 있습니다.\n",
     "dir(__builtins__)"
@@ -208,9 +372,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "NoneType"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def my_max(a, b):   # 나의 가상의 정의이다. \n",
     "    # 여기에 my_max 함수를 만들어주세요.\n",
@@ -416,9 +598,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "john, 안녕\n",
+      "익명, 안녕\n"
+     ]
+    }
+   ],
    "source": [
     "# 이름을 받아서 다음과 같이 인사하는 함수를 만들어보세요. \n",
     "# \"길동, 안녕?\"\n",
@@ -462,9 +653,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "non-default argument follows default argument (<ipython-input-4-e60091ba72d5>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-e60091ba72d5>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    def greeting(name='john', age):\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m non-default argument follows default argument\n"
+     ]
+    }
+   ],
    "source": [
     "# 오류를 확인해봅시다.\n",
     "def greeting(name='john', age):\n",
@@ -475,9 +675,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "soo은 20살이군요!\n"
+     ]
+    }
+   ],
    "source": [
     "# 수정해 봅시다.\n",
     "def greeting(age, name='john'):   # 기본값을 주는 것을 뒤에 둬야한다. \n",
@@ -497,9 +705,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "john은 34살입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "# 키워드 인자 예시\n",
     "def greeting(age, name='john'):\n",
@@ -517,9 +733,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (<ipython-input-7-b5fc888f4459>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-b5fc888f4459>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    greeting(age=10, 'neo')   # 처음에 지칭을 했으면 뒤에 오는 것들도 지칭을 해야한다.\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
    "source": [
     "# 위치 인자 => 키워드 인자 순서여야 합니다.\n",
     "greeting(age=10, 'neo')   # 처음에 지칭을 했으면 뒤에 오는 것들도 지칭을 해야한다. "
@@ -540,12 +765,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (<ipython-input-11-989034c3c1ec>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-11-989034c3c1ec>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    print(sep='\\t', 'a', 'b', 'c', end='--')\u001b[0m\n\u001b[1;37m                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
    "source": [
     "print('a', 'b', 'c', sep='//', end='--')   # 띄어쓰기도 기본값을 정할 수 있다. \n",
-    "print(sep='\\t', 'a', 'b', 'c' end='--') \n",
+    "print(sep='\\t', 'a', 'b', 'c', end='--') \n",
     "# 자기 자리 찾아가는 애들이 먼저다. 키워드 인자가 뒤따라 오게 되어있다. => 순서가 바뀌면 안된다. "
    ]
   },
@@ -568,9 +802,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7\n"
+     ]
+    }
+   ],
    "source": [
     "# 가변 인자 예시 (print문은 *obejcts를 통해 임의의 숫자의 인자를 모두 처리합니다.)\n",
     "print(1, 2, 3, 4, 5, 6, 7)"
@@ -578,9 +820,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3) <class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
     "# args는 tuple!\n",
     "def many_args(*asdf):   # 인자는 특별하다고 * 를 찍어준다. => 이 구간에 뭐가 들어올지 모르니 다 받겠다. \n",
@@ -618,9 +868,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "maximum = 0\n",
     "for num in [1, 2, 3, 4]:\n",
@@ -710,9 +968,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ko': '안녕', 'en': 'hi'} {'ko': 'dkssud', 'en': 'hi'}\n"
+     ]
+    }
+   ],
    "source": [
     "# 딕셔너리 생성 함수 예시\n",
     "hi1 = {'ko': '안녕', 'en': 'hi'}\n",
@@ -760,9 +1026,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "keyword can't be an expression (<ipython-input-16-c8434303d77f>, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-16-c8434303d77f>\"\u001b[1;36m, line \u001b[1;32m10\u001b[0m\n\u001b[1;33m    d2 = dict(1='a', 2=True, 3=33)   # 식별자 처음에는 숫자가 올 수 없다. => 따라서 d2 방법 보단 d1을 사용하는 것이 더 바람직\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m keyword can't be an expression\n"
+     ]
+    }
+   ],
    "source": [
     "# 사실은 dict()는 출력이 아니라 딕셔너리를 리턴합니다. \n",
     "# 리턴하는 my_fake_dict를 만들어주세요.\n",
@@ -1333,15 +1608,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 재귀를 이용한 코드를 작성해주세요.\n",
     "def fib(n):\n",
     "    if n == 0 or n == 1:\n",
     "        return 1\n",
-    "     else:\n",
+    "    else:\n",
     "        return fib(n-1) + fib(n-2)\n",
     "fib(4)"
    ]
