--- a/01_python/04.data_structure.ipynb
+++ b/01_python/04.data_structure.ipynb
@@ -181,16 +181,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'woooooooooo'"
+       "'y_y____!'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,23 +394,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['#월요일', '#밥시간', '#미세먼지', '오늘은', '어쩌구', '저쩌구']\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "['월요일', '밥시간', '미세먼지']"
+       "['a', 's', 'd']"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1180,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1476,29 +1469,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 리스트를 복사해봅시다.\n",
     "a = [1, 2, 3]\n",
-    "b = a[:]"
+    "b = a[:]\n",
+    "b\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 다른 방법으로 복사해봅시다.\n",
     "a = [1, 2, 3]\n",
-    "b = list(a)"
+    "b = list(a)\n",
+    "b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2518,19 +2535,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'asdf'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-210-a9e63834e738>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mfruits\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'사과'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mfruits\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mfruits\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'asdf'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mfruits\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'asdf'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'바나나', '수박'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2538,8 +2554,8 @@
     "fruits = {\"사과\", \"바나나\", \"수박\"}\n",
     "fruits.remove('사과')\n",
     "fruits\n",
-    "fruits.remove('asdf')\n",
-    "fruits\n"
+    "# fruits.remove('asdf')\n",
+    "# fruits\n"
    ]
   },
   {
