--- a/06_django_advance/191015.md
+++ b/06_django_advance/191015.md
@@ -41,4 +41,6 @@ default 를 비어있는 문자열로 주는 것이 가장 적절하다.
 Table 지우는 방법 
 
 * models.py 에서 지우고 싶은 class 주석 처리해서  makemigrations , migrate 하면 된다. => 테이블이 삭제된 것이기 때문에 기존에 있던 데이터들도 날라간다. 
-* 
+* `$ python manage.py mmigrate <APP_NAME> zero ` 
+
+* `$ rm <APP_NAME>/migrations/0*`  : 0 으로 시작하는 migrations 폴더 안에 있는 것들 지우기 
