--- a/07_JS/변수 - 01, 02, 16.md
+++ b/07_JS/변수 - 01, 02, 16.md
@@ -18,4 +18,17 @@
 
 
 
- 
+---
+
+07 arryy
+
+오브젝트는 접근하는 법이 뭔지 
+
+14- foreach, map, filter 잘 알아두면 되고 나머지는 그냥 있다는 수준으로 알아두기 
+
+17- 타입오브 찍어본거 잘 기억해두기 / 배열도 오브젝트로 나온다. !!!!
+
+10 - 스트링을 파싱하고 해석 , 시리얼라이징 
+
+12 -  
+
